site nav z-index fixed

--- a/_src/scss/modules/_site-header.scss
+++ b/_src/scss/modules/_site-header.scss
@@ -55,6 +55,7 @@
   }
   .nav-links {
     flex-direction: column;
+    z-index: 2;
     @include bp(sm) {
       flex-direction: row;
     }
